refonte de la navbar

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,7 +13,6 @@
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css"> -->
         <link rel="stylesheet" href="{{ asset('css/materialize.min.css') }}" media="all">
         <link rel="stylesheet" href="{{ asset('css/main.css') }}" media="all">
-        <!-- FONTS -->
         <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Allura|Dancing+Script|Great+Vibes|Lobster|Pacifico|Parisienne|Sacramento|Tangerine" rel="stylesheet">
         <!-- ICONS -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -39,6 +38,9 @@
             {#<script src="{{ asset('js/jquery-ui.min.js') }}"></script>#}
             {#<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>#}
             <script src="{{ asset('js/materialize.js') }}"></script>
+            <script src="{{ asset('js/navbar/modernizr.js') }}"></script>
+            <script src="{{ asset('js/navbar/main.js') }}"></script>
+
             <script src="{{ asset('js/main.js') }}"></script>
 
         {% endblock %}
