--- a/app/Resources/views/gallery/show.html.twig
+++ b/app/Resources/views/gallery/show.html.twig
@@ -24,7 +24,7 @@
 
                         <div class="center">
 
-                            <a href="{{ path('header_show_all') }}">
+                            <a href="{{ path('gallery_show_all') }}">
                                 <button class=" btn-floating btn-large waves-effect tooltipped icon-background6" type="submit" name="action"
                                         data-position="bottom"
                                         data-delay="50"
