--- a/app/Resources/views/header/index.html.twig
+++ b/app/Resources/views/header/index.html.twig
@@ -22,16 +22,19 @@
     }
 
     .a-input {
-        color: dimgray;
+        color: dimgray !important;
         font-size: x-large;
-        margin-top: 0px;
+        margin-top: 10px;
         margin-left: -45px;
+    }
+    .accueil{
+        margin-left: 5%;
     }
 </style>
 
 <nav>
     <div class="nav-wrapper grey darken-3">
-        <a href="{{ path('homepage') }}" class="brand-logo left">Accueil</a>
+        <a href="{{ path('homepage') }}" class="brand-logo accueil">Accueil</a>
         <ul class="right hide-on-med-and-down">
 
             {% for header in headers %}
@@ -77,10 +80,27 @@
 
 <script>
 
+
+    {#{% for header in headers %}#}
+
+        {#$('.dropdown-button{{ header.id }}').dropdown{{ header.id }}({#}
+                {#inDuration: 300,#}
+                {#outDuration: 225,#}
+                {#hover: true, // Activate on hover#}
+                {#belowOrigin: true, // Displays dropdown below the button#}
+                {#alignment: 'right' // Displays dropdown with edge aligned to the left of button#}
+            {#}#}
+        {#);#}
+
+    {#{% endfor %}#}
+
+
     (function($) {
         $(function() {
 
             {% for header in headers %}
+
+            var id = {{ header.id }}
                 $('.dropdown-button').dropdown{{ header.id }}({
                         inDuration: 300,
                         outDuration: 225,
