--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -40,7 +40,7 @@
                             <li>Showroom :</li>
                             <li>13 Chemin du Terroir</li>
                             <li>77920 Samois sur seine</li>
-                            <li>tèl : </li>
+                            <li>tèl : 06 07 70 31 49</li>
                             <li><a class="fontref" href="mailto:qq1@qqpart.com">nathalie.sian@yahoo.fr</a></li>
                         </ul>
                     </div>
