qlq ameliorations et bt fb

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,6 +8,11 @@
             - Nathalie Sian Création - Plasticienne
         </title>
         <meta name="description" content="Découvrez les collections de la création d'objets artisanaux décoratifs fait mains. Pour le jardin, la maison ou des bijoux de hautes qualités">
+        <meta property="og:url"           content="https://www.facebook.com/sian.nathalie/" />
+        <meta property="og:type"          content="website" />
+        <meta property="og:title"         content="nathaliesiancréation" />
+        <meta property="og:image"         content="https://www.facebook.com/sian.nathalie/photos/a.529774473783664.1073741834.455394557888323/1360539667373803/?type=3&theater" />
+    </head>
         <link rel="icon" type="image/x-icon" href="{{ asset('') }}" />
         <!-- CSS -->
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css"> -->
@@ -42,6 +47,7 @@
             <script src="{{ asset('js/navbar/main.js') }}"></script>
 
             <script src="{{ asset('js/main.js') }}"></script>
+
 
         {% endblock %}
     </body>
