--- a/web/css/main.css
+++ b/web/css/main.css
@@ -268,6 +268,16 @@ main {
     padding-top: 3%;
 }
 
+.contact{
+    margin-left: 30%;
+}
+
+.temp-fb{
+    margin-top: 30%;
+    width: 50%;
+    height: auto;
+}
+
 /*******************************************************/
 /*                                                     */
 /*                                                     */
