--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -15,7 +15,14 @@
     <footer class="page-footer backcontent">
         <div class="container">
             <div class="row">
-                <div class="col s12 m8 l8 center">
+                <div class="col s12 m2 l2">
+                    <div class="facebook">
+                         <a href="https://www.facebook.com/pg/sian.nathalie/">
+                             <img src="{{ asset('bundles/calendar/images-colorpicker/facebook.png') }}" class="temp-fb">
+                         </a>
+                    </div>
+                </div>
+                <div class="col s12 m6 l6 center">
                     <h4 class="white-text">Partenaires</h4>
 
                     <ul>
@@ -35,7 +42,7 @@
 
                 <!-- A METTRE EN ADMINISTRATION POUR CLIENT -->
                 <div class="col s12 m4 l4">
-                    <div class="font-size">
+                    <div class="font-size contact">
                         <ul>
                             <li>Showroom :</li>
                             <li>13 Chemin du Terroir</li>
